# amazeing

./: .gitignore  FUNZIONAMENTO.md  Makefile  README.md  a_maze_ing.py  config.txt  pyproject.toml
graf/: labirinto.txt  printlab.py
mazegen/: generator.py
